refactor email templates to reduce template files

--- a/install/config.json
+++ b/install/config.json
@@ -164,25 +164,18 @@
             "checks": [{
                     "name": "NO_MFA_ON_ROOT",
                     "title": "No MFA on Root",
-                    "description": "Check if multi-factor authentication (MFA) was set on the root account. As a security best practice, enable MFA for AWS account access, especially for long-term credentials such as the account root user and IAM users.",
-                    "emailTemplates": {
-                        "baseFileName": "basic_no_mfa_on_root"
-                    }
+                    "description": "Check if multi-factor authentication (MFA) was set on the root account. As a security best practice, enable MFA for AWS account access, especially for long-term credentials such as the account root user and IAM users."
                 },
                 {
                     "name": "NO_PASSWORD_POLICY",
                     "title": "Password policy is not configured",
-                    "description": "Check if a password policy was set for the account. Require that passwords adhere to a strong password policy to help prevent discovery through brute force or social engineering.",
-                    "emailTemplates": {
-                        "baseFileName": "basic_no_password_policy"
-                    }
+                    "description": "Check if a password policy was set for the account. Require that passwords adhere to a strong password policy to help prevent discovery through brute force or social engineering."
                 },
                 {
                     "name": "PUBLIC_BUCKETS",
                     "title": "Public S3 Buckets",
                     "description": "Check if any of the S3 buckets on the account are set for a public access. It is recommended to keep private access to S3 buckets unless it's necessary",
                     "emailTemplates": {
-                        "baseFileName": "basic_s3_public_access",
                         "itemFileName": "basic_s3_public_access_item"
                     }
                 },
@@ -191,7 +184,6 @@
                     "title": "Missing Tags",
                     "description": "Check if the configured resources are set with the required tags. It is recommended to tag resources to help manage workloads and costs",
                     "emailTemplates": {
-                        "baseFileName": "basic_missing_tags",
                         "itemFileName": "basic_missing_tags_item"
                     },
                     "config": {
@@ -213,25 +205,18 @@
                 {
                     "name": "NO_BUSINESS_SUPPORT",
                     "title": "No Premium Support",
-                    "description": "Check if the account is enrolled in premium support (business, enterprise, or enterprise on-ramp). It is recommended to enroll in premium support for any account with workloads in production",
-                    "emailTemplates": {
-                        "baseFileName": "basic_no_premium_support"
-                    }
+                    "description": "Check if the account is enrolled in premium support (business, enterprise, or enterprise on-ramp). It is recommended to enroll in premium support for any account with workloads in production"
                 },
                 {
                     "name": "NO_BUDGET",
                     "title": "No Budget Set",
-                    "description": "Check if there's at least one budget set on the account. It is recommended to have a budget set in order o monitor and control costs",
-                    "emailTemplates": {
-                        "baseFileName": "basic_no_budget"
-                    }
+                    "description": "Check if there's at least one budget set on the account. It is recommended to have a budget set in order o monitor and control costs"
                 },
                 {
                     "name": "UNUSED_EIP",
                     "title": "Unused Elastic IPs",
                     "description": "Check if there are unused Elastic IPs (EIPs). It is recommended to release any unused EIPs",
                     "emailTemplates": {
-                        "baseFileName": "basic_unused_eip",
                         "itemFileName": "basic_unused_eip_item"
                     }
                 },
@@ -240,7 +225,6 @@
                     "title": "Unattached EBS Volumes",
                     "description": "Check if there are EBS volumes not attached to an instance. It is recommended to delete EBS volumes if they have no use anymore",
                     "emailTemplates": {
-                        "baseFileName": "basic_unattached_ebs_volume",
                         "itemFileName": "basic_unattached_ebs_volume_item"
                     }
                 },
@@ -249,7 +233,6 @@
                     "title": "Default VPC Is In Use",
                     "description": "Check if the default VPC exists and if there are any resources in it. It is recommended to create a custom VPC and control the network configuration",
                     "emailTemplates": {
-                        "baseFileName": "basic_default_vpc",
                         "itemFileName": "basic_default_vpc_item"
                     },
                     "config":{
@@ -261,7 +244,6 @@
                     "title": "EC2 Running In Public Subnet",
                     "description": "Check if EC2 instances are running in a public subnet. It is recommended to run resources such as EC2 in private subnet when possible",
                     "emailTemplates": {
-                        "baseFileName": "basic_ec2_in_public_subnet",
                         "itemFileName": "basic_ec2_in_public_subnet_item"
                     }
                 }
