added amplify app and S3 for amplify deployment

--- a/install/config.json
+++ b/install/config.json
@@ -141,6 +141,38 @@
     "api": {
 
     },
+    "s3": {
+        "amplifyDeploymentBucket": {
+            "name": "amplify-deploy",
+            "localFolder": "frontend"
+        }
+    },
+    "amplify": {
+        "websiteName": "management_site",
+        "description": "Static website hosted on AWS Amplify to manage the settings",
+        "iamPolicies": [{
+                "name": "amplify_s3_access",
+                "actions": [
+                    "s3:GetObject",
+                    "s3:PutObject",
+                    "s3:DeleteObject",
+                    "s3:PutObjectAcl"
+                ],
+                "resources": [
+                    "arn:aws:s3:::***AMPLIFY_BUCKET_NAME***/*"
+                ]
+            },
+            {
+                "name": "amplify_s3_access_list_bucket",
+                "actions": [
+                    "s3:ListBucket"
+                ],
+                "resources": [
+                    "arn:aws:s3:::***AMPLIFY_BUCKET_NAME***"
+                ]
+            }
+        ]
+    },
     "ses": {
         "senderEmail": "SET SENDER EMAIL ADDRESS HERE OR USE AWS_SENDER_EMAIL environment variable"
     },
@@ -246,7 +278,7 @@
                     "emailTemplates": {
                         "itemFileName": "basic_resources_in_other_regions_item"
                     },
-                    "config":{
+                    "config": {
                         "regions": ["us-west-2", "us-east-1"]
                     }
                 },
