--- a/install/config.json
+++ b/install/config.json
@@ -141,28 +141,69 @@
             "schedule": {
                 "functionName": "schedule",
                 "fileLocation": "lambdas/check42_schedule.py"
+            },
+            "login": {
+                "functionName": "login",
+                "fileLocation": "lambdas/check42_login.py",
+                "iamPolicies": [{
+                    "name": "dynamodb_access",
+                    "actions": [
+                        "dynamodb:GetItem",
+                        "dynamodb:PutItem",
+                        "dynamodb:UpdateItem",
+                        "dynamodb:Query",
+                        "dynamodb:Scan"
+                    ],
+                    "resources": [
+                        "arn:aws:dynamodb:***REGION***:***ACCOUNT_ID***:table/***PREFIX***_settings"
+                    ]
+                }]
             }
         }
     },
     "api": {
         "name": "api",
         "description": "A Restful API to manage the checker configuration",
+        "authorizer": {
+            "functionName": "authorizer",
+            "fileLocation": "lambdas/check42_authorizer.py",
+            "iamPolicies": [{
+                "name": "dynamodb_access",
+                "actions": [
+                    "dynamodb:GetItem",
+                    "dynamodb:Query",
+                    "dynamodb:Scan"
+                ],
+                "resources": [
+                    "arn:aws:dynamodb:***REGION***:***ACCOUNT_ID***:table/***PREFIX***_settings"
+                ]
+            }],
+            "ttl": 600
+        },
         "resources": {
             "settings": {
                 "lambda_function": "settings",
-                "methods": ["GET", "PUT"]
+                "methods": ["GET", "PUT"],
+                "authorizer": true
             },
             "checks": {
                 "lambda_function": "checks",
-                "methods": ["GET", "PUT"]
+                "methods": ["GET", "PUT"],
+                "authorizer": true
             },
             "schedule": {
                 "lambda_function": "schedule",
-                "methods": ["GET", "PUT"]
+                "methods": ["GET", "PUT"],
+                "authorizer": true
             },
             "run": {
                 "lambda_function": "run",
-                "methods": ["GET"]
+                "methods": ["GET"],
+                "authorizer": true
+            },
+            "login": {
+                "lambda_function": "login",
+                "methods": ["POST"]
             }
         }
     },
