Add POST to run api endpoint

--- a/install/config.json
+++ b/install/config.json
@@ -198,7 +198,7 @@
             },
             "run": {
                 "lambda_function": "run",
-                "methods": ["GET"],
+                "methods": ["GET", "POST"],
                 "authorizer": true
             },
             "login": {
